<resources>
    <string name="app_name">Weather Watcher
    </string>
    <string name="action_settings">Settings</string>
    <string name="fetching_weather_info">Fetching Weather Info</string>
    <string name="weather_info_fetch_success">Weather info fetched successfully</string>
    <string name="fetching_weather_info_success">Fetching Weather Info</string>
    <string name="fetching_weather_info_failure">Failed to get weather info</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="country">Country</string>
    <string name="description">Description</string>
    <string name="temp">Temp</string>
    <string name="humidity">Humidity</string>
    <string name="temperature_min">Temperature Min</string>
    <string name="temperature_max">Temperature Max</string>
    <string name="speed">Speed</string>
    <string name="change_city">Change city</string>
    <string name="degree">Degree</string>
    <string name="name">Name</string>
    <string name="font_family_body_1_material">Quicksand-Regular</string>
    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>
    <string name="open_preference">Open Preference</string>
    <string-array name="tint_entries">
        <item>Primary</item>
        <item>Primary Dark</item>
        <item>Accent</item>
    </string-array>

    <string-array name="listArray">
        <item>celsius</item>
        <item>fahrenheit</item>

    </string-array>

    <string-array name="listValues">
        <item>1</item>
        <item>2</item>

    </string-array>


</resources>
