<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_detail"
    android:animateLayoutChanges="true"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.apple.project2.DetailsFragment">
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/change"
        android:foreground="?attr/selectableItemBackground"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:textColor="@color/colorWhite"
        android:layout_gravity="center"
        android:textSize="15dp"
        android:text="Change City ▼" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:textColor="@color/grey"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/latitudeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textColor="@color/grey"
            tools:text="12.98" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_horizontal_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:textColor="@color/grey"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/longitudeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:layout_weight="1"
            android:gravity="end"
            tools:text="77.58" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_horizontal_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:text="@string/country"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/countryTextView"
            android:layout_width="0dp"
            android:textColor="@color/grey"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            tools:text="IN" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_horizontal_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:text="@string/description"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/grey"
            android:gravity="end"
            tools:text="few clouds" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_horizontal_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp"
            android:textColor="@color/grey"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tempTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/grey"
            android:gravity="end"
            tools:text="299.68" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_horizontal_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/grey"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/humidityTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/grey"
            android:gravity="end"
            tools:text="31" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_horizontal_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature_min"
            android:textColor="@color/grey"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tempMinTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textColor="@color/grey"
            tools:text="299.15" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_horizontal_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/grey"
            android:layout_height="wrap_content"
            android:text="@string/temperature_max"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tempMaxTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:layout_weight="1"
            android:gravity="end"
            tools:text="300.15" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_horizontal_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:text="@string/speed"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/speedTextView"
            android:layout_width="0dp"
            android:textColor="@color/grey"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            tools:text="3.6" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_horizontal_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/grey"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textColor="@color/grey"
            tools:text="Kanija Bhavan" />
    </LinearLayout>


    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.apple.project2.ListContentFragment">
    </FrameLayout>
</LinearLayout>
